[gd_scene load_steps=11 format=2]

[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://kirifont/KiriFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds_ping_pong_8bit/ping_pong_8bit_plop.ogg" type="AudioStream" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/GameState.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 541.875, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 299.5, 17.5 )

[node name="Level" type="Node"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -400.0
custom_fonts/font = SubResource( 5 )
text = "Countdown"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="WallLeft" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( -17, 505 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2( 635, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( -17, 505 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 6 )]
position = Vector2( 300, 24 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 300, 512 )

[node name="Top" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( 300.5, -18 )
shape = SubResource( 2 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 0, 1060 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 300.5, -18 )
shape = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="GUI" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
